test/fixtures/errors/jade/_invalid_layout.jade
h1 This is an invalid layout
!= foo()
!= yield